Asegurando compatibilidad con Java17